[tool.poetry]
name = "gofastapi"
version = "0.1.0"
description = ""
authors = ["OleksaSolo <9095945@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
requests = "^2.31.0"
sqlalchemy = "^2.0.23"
psycopg2 = "^2.9.9"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
